@@ -1,28 +1,22 @@
-<vegastrike-config>
-        <key-bindings>
+<vegaconfig>
+        <bindings>
                 <bind key="t" modifier="none" command="target_enemy" />
                 <bind key="cursor_up" modifier="none" command="pitch_up"/>
                 <bind key="t" modifier="alt" command="increase_shields" arg="25"/>
-        </key-bindings>
-        <joystick nr="0">
-                <button nr="0" command="fire_weapon"/>
-        <joystick>
+        </bindings>
         <colors>
                 <color name="red" r="1" g="0" b="0"/>
         </colors>
-        <hudelements>
-                <hud name="elite_radar" x=430" y="200" w="50"/>
-                <!-- <hud name="wc_radar" x=430" y="200" w="50"/> --!>
-                <hud name="framerate_display" x="100" y="10"/>
-        </hudelements>
-        <display> <!-- replaces glsetup.txt --!>
-                <var name="fov" value="60.0"/>
-                <var name="aspect" value="1.3"/>
-                <var name="znear" value="1.0"/>
-                <var name="zfar" value="50000"/>
-        </display>
-        <network>
-                <var name="contact_master_server" value="0"/>
-        </network>
-        <player name="Alexander Rawass" callsign="StinkFist" logo="stinkfist.bmp"/>
-</vegastrike-config>
+	<variables>
+        	<section name="graphics">
+                	<var name="fov" value="60.0"/>
+                	<var name="aspect" value="1.3"/>
+                	<var name="znear" value="1.0"/>
+                	<var name="zfar" value="50000"/>
+        	</section>
+		<section name="player">
+			<var name="realname" value="Alexander Rawass"/>
+			<var name="email" value="alexannika@users.sourceforge.net"/>
+		</section>
+	</variables>
+</vegaconfig>
