@@ -1,3 +1,12 @@
+2001-10-18 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* added easydom.{cpp,h}
+	* added easydom.{cpp,h} to src/Makefile.am
+	* re-wrote src/vegaconfig
+	* re-wrote data/vegastrike.config
+	* added config tests in main.cpp
+
+	
 2001-10-16 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* modified src/vegaconfig
